Bigger fix: avatar on shared wishlist fix + modals on mobile fix + text selection disabled + toasts on wishlist

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,5 @@
 body {
     background-color: #111827;
     color: white;
+    user-select: none;
   }
